<resources>
    <string name="app_name">Music</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title"></string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="skip">SKIP x</string>
    <string name="menu_home">Home</string>
    <string name="menu_music">Music</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_video">Video</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="cancel">Cancel</string>
    <string name="OK">OK</string>
    <string name="permission_not_pass">Permission not get !</string>
    <string name="tips">Tip</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">ID</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Register</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">ID number must be >= 5 digits </string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="warning">Warning</string>
    <string name="account_warning">Id not match Password !</string>
    <string name="title_activity_base">BaseActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="NotAccount">No such account !</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="Unknown">Unknown</string>
    <string name="albumList">Albums</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="author">硬糖少女303</string>
    <string name="Albums">Albums</string>
    <string name="musics">Musics</string>
    <string name="album_name">AlbumName</string>
    <string name="album_group">GroupName</string>
    <string name="Introduce">Introduce</string>
    <string name="album_data">Date</string>
</resources>